--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 .Rhistory
 .RData
 .Ruserdata
+
+#Dont track content of these folders
+private_Git_Ignore/
+
+#Dont add Packages to git 
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
